@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.244 2005/07/31 01:06:43 wiz Exp $
+# $NetBSD: Makefile,v 1.245 2005/09/03 22:47:23 xtraeme Exp $
 #
 
 COMMENT=	Security tools
@@ -173,7 +173,6 @@ SUBDIR+=	pgpdump
 SUBDIR+=	pgpenvelope
 SUBDIR+=	php-mcrypt
 SUBDIR+=	php-mhash
-SUBDIR+=	php-openssl
 SUBDIR+=	pinentry
 SUBDIR+=	pinepgp
 SUBDIR+=	pks
