@@ -1,2 +1,0 @@
-PHP is a programming language designed to be embedded into web pages.
-This module provides access to the OpenSSL library.
