@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2005/06/17 03:50:40 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2005/10/07 16:51:41 jdolecek Exp $
 #
 
 PKGNAME=		ap-php-${PHP_BASE_VERS}
-PKGREVISION=		1
+PKGREVISION=		2
 COMMENT=		Apache (${PKG_APACHE}) module for ${PKG_PHP}
 
 APACHE_MODULE=		YES
