@@ -1,5 +1,5 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.7 2004/11/01 19:50:45 jdolecek Exp $
+$NetBSD: MESSAGE,v 1.8 2004/12/16 17:42:14 jdolecek Exp $
 
 To process PHP scripts, you will need a PHP-enabled HTTP server.  You may
 either configure the HTTP server to use PHP as a CGI program, or install a
@@ -12,4 +12,7 @@ Some additional packages you may wish to install are:
 
 Note that php4-pcre, php4-session and php4-xml are no longer
 separate packages since 4.3.3, the main PHP4 package has them built-in now.
+
+Note php-openssl has been removed as separate package as of 4.4.0nb2, the
+main PHP4 package has them built-in now.
 ===========================================================================
