@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.52 2005/09/10 09:04:01 jdolecek Exp $
+# $NetBSD: Makefile,v 1.53 2005/10/05 15:59:47 tron Exp $
 
 PKGNAME=		php-${PHP_BASE_VERS}
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES+=		lang
 COMMENT=		HTML-embedded scripting language
 
