@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11373 2005/10/08 12:03:39 hira Exp $
+$NetBSD: CHANGES,v 1.11374 2005/10/08 16:05:48 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4341,3 +4341,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated print/dvipdfmx to 0.0.0.20031116nb3 [hira 2005-10-08]
 	Added net/php-xmlrpc 4.4.0 [jdolecek 2005-10-08]
 	Added net/php-xmlrpc 5.0.5 [jdolecek 2005-10-08]
+	Removed security/php-openssl [jdolecek 2005-10-08]
